<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="20dp"
        android:text="@string/sistema"
        android:textSize="18dp"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="18dp"
        android:layout_marginRight="18dp"
        android:onClick="apresentaMensagem"
        android:text="@string/save" />

    <EditText
        android:id="@+id/editTextDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/button1"
        android:ems="10"
        android:hint="@string/dicaDescricao"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextHoras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextDescricao"
        android:layout_alignLeft="@+id/editTextDescricao"
        android:layout_alignRight="@+id/editTextDescricao"
        android:layout_marginBottom="54dp"
        android:ems="10"
        android:hint="@string/dicaTempo"
        android:inputType="numberDecimal" />

    <Spinner
        android:id="@+id/spinnerProjeto"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/editTextHoras"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="25dp" />

    <DatePicker
        android:id="@+id/datePickerData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerProjeto"
        android:layout_below="@+id/spinnerProjeto"
        android:layout_marginTop="14dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignLeft="@+id/editTextDescricao"
        android:text="@string/listagem"
        android:onClick="abrirListagem"
         />

</RelativeLayout>
